--- a/paper/references.bib
+++ b/paper/references.bib
@@ -27,6 +27,14 @@
 https://github.com/sharlagelfand/opendatatoronto/},
     url = {https://sharlagelfand.github.io/opendatatoronto/},
   }
+  
+@Manual{tidyverse,
+  title = {Tidyverse: Easily Install and Load the 'Tidyverse'},
+  author = {Hadley Wickham and others},
+  year = {2023},
+  note = {R package version 2.0.0},
+  url = {https://CRAN.R-project.org/package=tidyverse},
+}
 
 @Manual{dplyr,
     title = {dplyr: A Grammar of Data Manipulation},
@@ -47,6 +55,14 @@ https://github.com/sharlagelfand/opendatatoronto/},
     url = {https://www.jstatsoft.org/v40/i03/},
   }
 
+@Manual{knitr,
+  title = {knitr: A General-Purpose Package for Dynamic Report Generation in R},
+  author = {Yihui Xie},
+  year = {2021},
+  note = {R package version 1.48},
+  url = {https://CRAN.R-project.org/package=knitr},
+}
+
 @Manual{readr,
     title = {readr: Read Rectangular Text Data},
     author = {Hadley Wickham and Jim Hester and Jennifer Bryan},
@@ -54,3 +70,27 @@ https://github.com/sharlagelfand/opendatatoronto/},
     note = {R package version 2.1.5, https://github.com/tidyverse/readr},
     url = {https://readr.tidyverse.org},
   }
+
+@Manual{ggplot2,
+  title = {ggplot2: Elegant Graphics for Data Analysis},
+  author = {Hadley Wickham and others},
+  year = {2023},
+  note = {R package version 3.5.1},
+  url = {https://CRAN.R-project.org/package=ggplot2},
+}
+
+@Misc{toronto-council-attendance,
+  title        = {City Council and Committees Meeting Schedule Reports},
+  author       = {{City of Toronto}},
+  year         = {2024},
+  url          = {https://open.toronto.ca/dataset/city-council-and-committees-meeting-schedule-reports/},
+  note         = {Accessed: 2024-09-25},
+}
+
+@Misc{toronto-city-council-attendance,
+  title        = {Members of Toronto City Council - Meeting Attendance},
+  author       = {{City of Toronto}},
+  year         = {2024},
+  url          = {https://open.toronto.ca/dataset/members-of-toronto-city-council-meeting-attendance/},
+  note         = {Accessed: 2024-09-25},
+}
