--- a/paper/references.bib
+++ b/paper/references.bib
@@ -79,6 +79,13 @@ https://github.com/sharlagelfand/opendatatoronto/},
   url = {https://CRAN.R-project.org/package=ggplot2},
 }
 
+@Misc{ChatGPT,
+  author = {OpenAI},
+  title = {ChatGPT: {L}anguage model},
+  year = {2023},
+  note = {Model: GPT-4. Retrieved from https://chat.openai.com/ on September 26, 2024}
+}
+
 @Misc{toronto-council-attendance,
   title        = {City Council and Committees Meeting Schedule Reports},
   author       = {{City of Toronto}},
